# bibman

./: CHANGELOG.md  README.md  README_pypi.md  flake.nix  pyproject.toml
.github/workflows/: deploy_docs.yaml  pypi_docs.yaml  update_docs.yaml
docs/: changelog.md  index.md  install.md
docs/commands/: add.md  app_options.md  check.md  export.md  html.md  init.md  note.md  pdf.md  show.md  tui.md
hooks/: pre-commit
scripts/: check_version.sh
src/bibman/: __init__.py  __main__.py  bibtex.py  cli.py  config_file.py  pdf_utils.py  resolve.py  tui.py  utils.py
src/bibman/subcommands/: check.py  pdf.py
src/bibmancli/: cli.py  pdf_utils.py  tui.py  utils.py
src/bibmancli/subcommands/: check.py  pdf.py
tests/: entries.py  test_resolve.py  test_utils.py
