[project]
name = "bibman"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pedro Juan Royo", email = "pedro.juan.royo@gmail.com" }
]
dependencies = [
    "typer[all]>=0.12.4",
    "requests>=2.32.3",
    "bibtexparser>=1.4.1",
    "pyfzf-iter>=0.0.1",
    "textual>=0.79.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"bibman" = "bibman:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bibman"]
