[project]
name = "bibman"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pedro Juan Royo", email = "pedro.juan.royo@gmail.com" }
]
dependencies = [
    "typer[all]>=0.12.4",
    "requests>=2.32.3",
    "bibtexparser>=2.0.0b7",
    "pyfzf-iter>=0.0.1",
    "textual>=0.79.0",
    "pylatexenc>=2.10",
    "habanero>=1.2.6",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"bibman" = "bibman:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mkdocs-material>=9.5.34",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bibman"]

[tool.ruff]
line-length = 80
extend-exclude = [".venv"]
